changes in swagger and test case
