# restaurantServices/app/routes/restaurants.routes.js
@@ -3,7 +3,7 @@ module.exports = app =>{
 
     app.post("/restaurant/crete-restaurant", restaurant.create)
     app.get("/restaurant/find-all-restaurant", restaurant.findAll);
-    app.get("/restaurant/search", restaurant.serchRestaurant);
+    app.post("/restaurant/search", restaurant.serchRestaurant);
     app.put("/restaurant/update-restaurant", restaurant.update);
     app.delete("/restaurant/delete", restaurant.delete);
 
